feat(producer): implement kafka data producer service
Adds the producer component responsible for ingesting live trade data.

The service connects to the Binance WebSocket stream, parses trade messages, formats them into a clean JSON structure, and publishes them to the 'raw_trades' Kafka topic.

Key features include:
- Dockerfile for containerization with all dependencies.
- Robust error handling with exponential backoff for WebSocket reconnections.
- A wait-for-it script in docker-compose to ensure Kafka is available before the producer starts, enhancing startup reliability.
- Updates docker-compose.yml with the new producer service and the required KRaft configuration for the modern Kafka image.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,14 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      KAFKA_PROCESS_ROLES: 'broker,controller'
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_CONTROLLER_QUORUM_VOTERS: '1@kafka:9093'
+      KAFKA_LISTENERS: 'PLAINTEXT://kafka:9092,CONTROLLER://kafka:9093'
+      KAFKA_INTER_BROKER_LISTENER_NAME: 'PLAINTEXT'
+      KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
 
   postgres:
     image: postgres:17-alpine
@@ -34,6 +39,28 @@ services:
       - postgres-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+  
+  producer:
+    build: ./producer
+    container_name: producer
+    depends_on:
+      - kafka
+    command: >
+      sh -c "
+        echo 'Waiting for Kafka to be ready...' &&
+        while ! nc -z kafka 9092; do
+          sleep 0.5;
+        done;
+        echo 'Kafka is ready!' &&
+        python producer.py
+      "
+    environment:
+      EXCHANGE_WS_URL: wss://stream.binance.com:9443/ws
+      CRYPTO_PAIR: btcusdt
+      KAFKA_BROKER_URL: kafka:9092
+      KAFKA_TOPIC: raw_trades
+    volumes:
+      - ./producer:/app
 
 volumes:
   postgres-data:
